# rout3serv

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-cargo-profile.py  justfile  rout3serv.Dockerfile  route3_road.Dockerfile  server-config.example.toml  til3serv.Dockerfile
.github/workflows/: ci.yml
crates/: README.md
crates/h3io/src/: lib.rs  (+2 more)
crates/hexigraph/: Cargo.toml
crates/hexigraph/doc/images/: justfile  prepared_h3_edge_graph.dot
crates/hexigraph/src/: error.rs  lib.rs
crates/hexigraph/src/algorithm/: edge.rs  geom.rs  mod.rs  resolution.rs
crates/hexigraph/src/algorithm/graph/: covered_area.rs  differential_shortest_path.rs  dijkstra.rs  mod.rs  nearest_graph_nodes.rs  path.rs  shortest_path.rs  within_weight_threshold.rs
crates/hexigraph/src/container/: block.rs  mod.rs
crates/hexigraph/src/container/treemap/: mod.rs  serde.rs
crates/hexigraph/src/graph/: fastforward.rs  h3edge.rs  mod.rs  modifiers.rs  node.rs  prepared.rs
crates/hexigraph/src/io/: osm.rs
crates/rout3serv/: Cargo.toml  README.md  build.rs  config.example.yaml
crates/rout3serv/doc/: generate-images.ipynb
crates/rout3serv/proto/: rout3serv.proto
crates/rout3serv/src/: build_info.rs  config.rs  customization.rs  main.rs  weight.rs
crates/rout3serv/src/geo/: buffer.rs  error.rs  mod.rs  webmercator.rs  wkb.rs
crates/rout3serv/src/grpc/: differential_shortest_path.rs  error.rs  geometry.rs  mod.rs  names.rs  shortest_path.rs  util.rs  vector.rs  within_threshold.rs
crates/rout3serv/src/grpc/api/: mod.rs
crates/rout3serv/src/io/: dataframe.rs  error.rs  format.rs  graph_store.rs  ipc.rs  key.rs  memory_cache.rs  mod.rs  objectstore.rs  parquet.rs  serde_util.rs  storage.rs
crates/rout3serv/src/osm/: car.rs  mod.rs  pedestrian.rs
crates/rout3serv/src/osm/tags/: maxspeed.rs  sidewalk.rs
crates/rout3serv/src/server/: differential_shortest_path.rs  error.rs  mod.rs  shortest_path.rs  storage.rs  util.rs  vector.rs  within_threshold.rs
crates/rout3serv/src/server/api/: mod.rs
crates/rout3serv_py/: README.md  example.ipynb  justfile  pyproject.toml
crates/rout3serv_py/rout3serv/: __init__.py  rout3serv_pb2.py  rout3serv_pb2_grpc.py
crates/route3_road/: Cargo.toml  README.md
crates/route3_road/doc/: generate-images.ipynb
crates/route3_road/proto/: route3_road.proto
crates/route3_road/python_client/: README.md  example.ipynb
crates/route3_road/python_client/route3_road_client/: __init__.py  route3_road_pb2.py  route3_road_pb2_grpc.py
crates/route3_road/src/: config.rs  customization.rs  main.rs  weight.rs
crates/route3_road/src/io/: graph_store.rs
crates/route3_road/src/osm/: car.rs  maxspeed.rs  mod.rs  pedestrian.rs
crates/route3_road/src/osm/tags/: maxspeed.rs  mod.rs  sidewalk.rs
crates/route3_road/src/server/: differential_shortest_path.rs  mod.rs  names.rs  shortest_path.rs  storage.rs  util.rs  vector.rs  within_threshold.rs
crates/route3_road/src/server/api/: mod.rs
crates/s3io/: Cargo.toml
crates/s3io/src/: dataframe.rs  error.rs  format.rs  lib.rs  s3.rs  ser_and_de.rs
crates/slippymap-h3-tiles/: Cargo.toml
crates/slippymap-h3-tiles/src/: lib.rs  webmercator.rs
crates/til3serv/: Cargo.toml  README.md  build.rs  config.example.yaml  config.yaml  package.json  webpack.config.js
crates/til3serv/src/: build_info.rs  config.rs  main.rs  response.rs  server.rs  state.rs  tile.rs  ui.rs  util.rs
crates/til3serv/src-web/: composition.ts  config.ts  index.ts
crates/til3serv/src-web/format/: arrowh3.ts  base.ts  jsonh3.ts  jsonlh3.ts
crates/til3serv/templates/: base.html  main.html  viewer.html
crates/til3serv/ui/: package.json  tsconfig.json  webpack.config.js
crates/til3serv/ui/src/: config.ts  index.ts
crates/til3serv/ui/src/format/: jsonlh3.ts
crates/til3serv/ui/templates/: viewer.html
datasources/: osmium.fastfood.json  osmium.hospital.json  population.py  requirements.txt
h3io/: Cargo.toml
h3io/src/: dataframe.rs  error.rs  fetch.rs  lib.rs  s3.rs
proto/: route3.proto
route3/: Cargo.toml  build.rs  server-config.example.toml
route3/src/: constants.rs  graph.rs  io.rs  main.rs  osm.rs  server.rs
route3/src/io/: gdal.rs  mod.rs  s3.rs
route3/src/server/: algo.rs  api.rs  mod.rs  population_movement.rs  util.rs
route3/src/server/api/: mod.rs
route3_client/: justfile
route3_client/tests/: test_route3py.py
route3_core/: Cargo.toml
route3_core/benches/: route_germany.rs
route3_core/examples/: graph_from_osm.rs
route3_core/src/: collections.rs  error.rs  gdal_util.rs  graph.rs  iter.rs  lib.rs  osm.rs  routing.rs
route3_core/src/algo/: differential_shortest_path.rs  dijkstra.rs  gdal.rs  iter.rs  mod.rs  path.rs  shortest_path.rs
route3_core/src/collections/: mod.rs  partitioned.rs
route3_core/src/formats/: osm.rs
route3_core/src/io/: gdal.rs  mod.rs  serde_support.rs
route3_osm/: Cargo.toml
route3_osm/src/: main.rs  osm.rs
route3_python_client/: example.py  pyproject.toml
route3_python_client/route3_client/: __init__.py  route3_pb2.py  route3_pb2_grpc.py
route3_road/: Cargo.toml  build.rs  server-config.example.toml  server-config.example.yaml
route3_road/proto/: route3_road.proto
route3_road/python_client/: example.ipynb  example.py  justfile  pyproject.toml
route3_road/python_client/route3_road_client/: __init__.py  route3_road_pb2.py  route3_road_pb2_grpc.py
route3_road/src/: config.rs  main.rs  osm.rs  weight.rs
route3_road/src/io/: dataframe.rs  format.rs  graph_store.rs  mod.rs  s3.rs
route3_road/src/osm/: car.rs  mod.rs
route3_road/src/server/: differential_shortest_path.rs  mod.rs  population_movement.rs  shortest_path.rs  storage.rs  util.rs  vector.rs
route3_road/src/server/api/: mod.rs
route3py/: justfile  pyproject.toml
route3py/route3py/: __init__.py  route3_pb2.py  route3_pb2_grpc.py
route3py/tests/: test_route3py.py
src/: graph.rs  io.rs  main.rs  osm.rs
testdata/: graph-germany_r6_f64.bincode
til3serv/: Cargo.toml  config.yaml
til3serv/src/: config.rs  main.rs  response.rs  server.rs  tile.rs
