[workspace]
members = [
    "crates/rout3serv",
    "crates/s3io",
    "crates/til3serv",
    "crates/slippymap-h3-tiles"
]

[workspace.dependencies]
geo-types = "0.7"
h3ron = { git = "https://github.com/nmandery/h3ron.git", rev = "527ca333d3f506121018270763ac841ba08516d2", features = ["use-rayon", "roaring", "use-serde"] }
h3ron-graph = { git = "https://github.com/nmandery/h3ron.git", rev = "527ca333d3f506121018270763ac841ba08516d2", features = ["io_gdal", "io_osm", "io_serde_util"] }


[profile.release]
#opt-level = 3
# include full debug info. inceases size of the binary, but that should not matter
# for this tool
debug = 1
# enable lto. increases compilation time
#lto = "fat"
# just few codegen units. slower compilation, but faster code
#codegen-units = 1
