[workspace]
members = [
    "crates/rout3serv",
]


[profile.release]
#opt-level = 3
# include full debug info. inceases size of the binary, but that should not matter
# for this tool
#debug = 1
# enable lto. increases compilation time
#lto = "fat"
#debug = 0
# just few codegen units. slower compilation, but faster code
#codegen-units = 1
