[package]
name = "route3"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[dependencies]
arrow = "4.4"
backoff = { version = "0.3", features = ["tokio_1", "futures", "tokio"] }
bincode = "1.3"
bytesize = "1"
clap = "^2.33"
env_logger = "0.8"
eyre = "0.6"
futures = "0.3"
geo = "0.18"
jemallocator = "0.3.0"
lazy_static = "1.4"
log = "0.4"
prost = "0.7"
regex = "1.5"
route3_core = { path = "../route3_core", features = ["with-gdal", "osm"]}
rusoto_core = { version = "0.46", default_features = false, features = ["rustls", ] }
rusoto_s3 = { version = "0.46", default_features = false, features = ["rustls", ] }
rustc-hash = "1.1"
toml = "0.5"
tonic = "0.4"
wkb = "0.7"
tokio-stream = "0.1"

[dependencies.ordered-float]
version = "2.5"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "1.6"
features = [
    "full" # TODO: reduce
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.geojson]
version = "0.22"
features = ["geo-types"]

[build-dependencies]
tonic-build = "0.4"
