[package]
name = "route3_core"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[features]
with-gdal = ["gdal"]
osm = ["osmpbfreader"]

[dependencies]
thiserror = "1"
bincode = "1.3"
bytesize = "1"
geo = "0.18"
geo-types = "0.7"
h3ron = "0.11"
log = "0.4"
pathfinding = "=2.1.3" # last version without rustc_hash
serde_json = "1"
toml = "0.5"
num-traits = "0.2"
rayon = "1.5"

[dependencies.ordered-float]
version = "2.5"
features = ["serde"]

[dependencies.osmpbfreader]
version = "0.14"
optional = true

[dependencies.hashbrown]
version = "0.11"
features = ["rayon", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.gdal]
#version = "0.8.0"
git = "https://github.com/georust/gdal.git"
rev = "6605e62"
optional = true

