[package]
name = "route3_core"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[features]
with-gdal = ["gdal"]
osm = ["osmpbfreader"]

[dependencies]
thiserror = "1"
bincode = "1.3"
bytesize = "1"
geo = "0.18"
geo-types = "0.7"
h3ron = "0.11"
log = "0.4"
toml = "0.5"
num-traits = "0.2"
rayon = "1.5"
indexmap = "1.7"
ahash = "0.7"
num_cpus = "1"

[dependencies.ordered-float]
version = "2.6"
features = ["serde"]

[dependencies.osmpbfreader]
version = "0.15"
optional = true

[dependencies.hashbrown]
version = "0.11"
features = ["rayon", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.gdal]
git = "https://github.com/georust/gdal.git"
rev = "a18e46b0bfa72be62ed872d87dca55309a6859e6" # TryFrom to convert from gdal geometries to geo-types
optional = true
features = ["bindgen"]

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "route_germany"
harness = false
