[package]
name = "route3_core"
version = "0.2.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[features]
with-gdal = ["gdal"]
osm = ["osmpbfreader"]

[dependencies]
thiserror = "1"
bincode = "1.3"
bytesize = "1"
geo = "0.18"
geo-types = "0.7"
log = "0.4"
toml = "0.5"
num-traits = "0.2"
rayon = "1.5"
indexmap = "1.7"
ahash = "0.7"
num_cpus = "1"

[dependencies.h3ron]
version = "0.12"
#git = "https://github.com/nmandery/h3ron.git"
#rev = "3f0c2ba46abb47127a5463a122f589203d83a41a"

[dependencies.ordered-float]
version = "2.6"
features = ["serde"]

[dependencies.osmpbfreader]
version = "0.15"
optional = true

[dependencies.hashbrown]
version = "0.11"
features = ["rayon", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.gdal]
version = "0.9.0"
optional = true
features = ["bindgen"]

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies.clap]
version = "^2.33"

[[bench]]
name = "route_germany"
harness = false

[[example]]
name = "graph_from_osm"
required-features = ["osm"]
