[package]
name = "route3_road"
version = "0.3.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"
license = "MIT"

[dependencies]
backoff = { version = "0.3", features = ["tokio_1", "futures", "tokio"] }
bytesize = "1"
clap = "^2.33"
env_logger = "0.9"
eyre = "0.6"
futures = "0.3"
geo = "0.18"
lazy_static = "1.4"
log = "0.4"
prost = "0.8"
rayon = "^1.5"
regex = "1.5"
rusoto_core = { version = "0.47" }
rusoto_s3 = { version = "0.47" }
toml = "0.5"
tonic = "0.5"
tokio-stream = "0.1"
itertools = "0.10"
geo-types = "0.7"
lru = "0.7.0"
num-traits = "0.2"
approx = "0.5"

[dependencies.uom]
version = "0.31"
features = ["use_serde"]

[dependencies.polars-core]
git = "https://github.com/pola-rs/polars.git"
rev = "573477f80ea42b74ff41200e6ca79898cb383bca"
features = ["serde"]

[dependencies.arrow] # matches dependency of polars-code
package = "arrow2"
git = "https://github.com/jorgecarleitao/arrow2"
rev = "b62184d32a56465f145e4692e1a90fc4fe418d82"
default-features = false
features=["io_ipc"]

[dependencies.bytes]
version = "1"

[dependencies.mimalloc]
version = "0.1"
default_features = false

[dependencies.h3ron]
git = "https://github.com/nmandery/h3ron.git"
rev = "13afab5475cfc9d16fda0f804462e6e1f5bcb6a6"
features = ["io", "use-rayon", "use-roaring", "use-serde"]

[dependencies.h3ron-graph]
git = "https://github.com/nmandery/h3ron.git"
rev = "13afab5475cfc9d16fda0f804462e6e1f5bcb6a6"
features = ["use-gdal", "osm"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "1.12"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.geojson]
version = "0.22"
features = ["geo-types"]

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.hyper]
version = "0.14"
features = ["client"]

[dependencies.native-tls]
version = "0.2"

[dependencies.gdal]
version = "0.10.0"
features = ["bindgen"]

[build-dependencies]
tonic-build = "0.5"
vergen = { version = "5", features = ["rustc", "build"] }
