[package]
name = "route3_road"
version = "0.3.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = "^2.33"
env_logger = "0.9"
eyre = "0.6"
geo = "0.18"
lazy_static = "1.4"
log = "0.4"
prost = "0.8"
rayon = "^1.5"
regex = "1.5"
tonic = "0.5"
tokio-stream = "0.1"
itertools = "0.10"
geo-types = "0.7"
lru = "0.7.0"
serde_yaml = "0.8"
num-traits = "0.2"
approx = "0.5"
ordered-float = "2.8.0"

[dependencies.h3io]
path = "../h3io"

[dependencies.uom]
version = "0.31"
features = ["use_serde"]

[dependencies.polars-core]
version = "0.17.0"
features = ["serde"]

[dependencies.arrow] # matches dependency of polars-code
package = "arrow2"
version = "0.7"
default-features = false
features=["io_ipc", "io_parquet", "io_ipc_compression", "io_parquet_compression"]

[dependencies.mimalloc]
version = "0.1"
default_features = false

[dependencies.h3ron]
git = "https://github.com/nmandery/h3ron.git"
rev = "05acba1f88865301feecd19383643705fc755db8"
features = ["io", "use-rayon", "use-roaring", "use-serde"]

[dependencies.h3ron-graph]
git = "https://github.com/nmandery/h3ron.git"
rev = "05acba1f88865301feecd19383643705fc755db8"
features = ["use-gdal", "osm"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "1.12"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.geojson]
version = "0.22"
features = ["geo-types"]

[dependencies.gdal]
version = "0.10.0"
features = ["bindgen"]

[build-dependencies]
tonic-build = "0.5"
vergen = { version = "5", features = ["rustc", "build"] }
