[package]
name = "rout3serv"
version = "0.6.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
publish = false
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
bytes = "1"
bytesize = "1"
clap = "^4"
env_logger = "0.10"
flatgeobuf = { version = "^3", default_features = false }
futures = "0.3"
geos = { version = "8", features = ["geo", "static"] }
geo = "0.23"
geojson = { version = "0.24", features = ["geo-types"] }
geo-types = "0.7"
geozero = { version = "0.9", features = ["with-geo", "with-wkb", "with-geos"], default_features = false }
h3ron-graph = { features = ["io_osm"], git = "https://github.com/nmandery/h3ron.git", rev = "2dd6a5c995639a6239fb7b75c8add1e6c266839d" }
h3ron-polars = { features = ["serde"], git = "https://github.com/nmandery/h3ron.git", rev = "2dd6a5c995639a6239fb7b75c8add1e6c266839d" }
h3ron = { features = ["use-rayon", "roaring", "use-serde"], git = "https://github.com/nmandery/h3ron.git", rev = "2dd6a5c995639a6239fb7b75c8add1e6c266839d" }
indexmap = "^1.7"
itertools = "0.10"
mimalloc = { version = "0.1", default_features = false }
num-traits = "0.2"
object_store = { version = "0.5", features = ["aws"] }
once_cell = "1"
ordered-float = "3"
polars-core = "0.26"
polars = { version = "0.26", features = ["ipc", "parquet", "performant"] }
prost = "0.11"
rayon = "^1.5"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
tokio-stream = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.8", features = ["gzip"] }
tower-http = { version = "^0.3", features = ["trace"] }
tracing = "0.1"
uom = { version = "0.33", features = ["use_serde"] }
uuid = { version = "1", features = ["v4"] }
zstd = "^0.12"

[dev-dependencies]
float-cmp = "0.9"

[build-dependencies]
tonic-build = { version = "0.8" }
vergen = { version = "7", features = ["rustc", "build"] }
