[tool.poetry]
name = "rout3serv"
version = "0.6.0"
description = "api client for rout3serv"
authors = ["Nico Mandery <nico@nmandery.net>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1"
Shapely = "^1.8"
pyarrow = "^10"
protobuf = "^3"
#pandas = "^1.3.0"
#geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grpcio-tools = "^1"
notebook = "^6"
geopandas = "^0.12"
folium = "^0.12"
h3 = "^3"
branca = "^0.4"
geojson = "^2"
matplotlib = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
