[package]
name = "route3_road"
version = "0.3.2"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
clap = "^2.33"
env_logger = "0.9"
eyre = "0.6"
lazy_static = "1.4"
log = "0.4"
prost = "0.9"
rayon = "^1.5"
regex = "1.5"
tokio-stream = "0.1"
itertools = "0.10"
geo-types = "0.7"
serde_yaml = "0.8"
num-traits = "0.2"
approx = "0.5"
ordered-float = "2.8.0"

[dependencies.geo]
# version = "0.18"
git = "https://github.com/georust/geo.git"
rev = "75b17e5a74ce279eb06c715d7d9e03b53b68364c" # for chaikin smoothing

[dependencies.s3io]
path = "../s3io"

[dependencies.uom]
version = "0.31"
features = ["use_serde"]

[dependencies.polars-core]
version = "0.18"
features = ["serde"]

[dependencies.arrow] # matches dependency of polars-core
package = "arrow2"
version = "0.8"
default-features = false
features = []

[dependencies.mimalloc]
version = "0.1"
default_features = false

[dependencies.h3ron]
#version = "0.13"
git = "https://github.com/nmandery/h3ron.git"
rev = "7abae910657f47efd43859c03febdf2e0a5c41d7"
features = ["io", "use-rayon", "use-roaring", "use-serde"]

[dependencies.h3ron-graph]
#version = "0.2"
git = "https://github.com/nmandery/h3ron.git"
rev = "7abae910657f47efd43859c03febdf2e0a5c41d7"
features = ["use-gdal", "osm"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "1.12"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.tonic]
version = "0.6"
features = ["compression"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.geojson]
version = "0.22"
features = ["geo-types"]

[dependencies.gdal]
version = "0.11.0"
features = ["bindgen"]

[dependencies.tower-http]
version = "^0.2"
features = ["trace"]

[build-dependencies]
tonic-build = { version = "0.6", features = ["compression"] }
vergen = { version = "6", features = ["rustc", "build"] }
