[package]
name = "s3io"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
rusoto_core = { version = "0.47" }
rusoto_s3 = { version = "0.47" }
thiserror = "1"
itertools = "0.10"
indexmap = "^1.7"
async-trait = "0.1"

[dependencies.polars-core]
version = "0.18"
features = ["serde"]

[dependencies.arrow] # matches dependency of polars-core
package = "arrow2"
version = "0.8"
default-features = false
features = ["io_ipc", "io_parquet", "io_ipc_compression", "io_parquet_compression"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.h3ron]
#version = "0.13"
git = "https://github.com/nmandery/h3ron.git"
rev = "191082a4a99d41caf517bee99bc800a5afe475f7"
features = ["io", "rayon", "roaring", "compression", "use-serde"]

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.hyper]
version = "0.14"
features = ["client"]

[dependencies.native-tls]
version = "0.2"

[dependencies.bytes]
version = "1"

[dependencies.tokio]
version = "1"
features = [
    "rt",
    "macros",
    "sync"
]

[dependencies.backoff]
version = "0.4"
features = ["tokio_1", "futures", "tokio"]

