[package]
name = "s3io"
version = "0.1.0"
edition = "2021"
authors = ["Nico Mandery <nico@nmandery.net>"]
publish = false

[dependencies]
bytesize = "1"
futures = "0.3"
once_cell = "1"
log = "0.4"
regex = "1.5"
rusoto_core = { version = "0.48" }
rusoto_s3 = { version = "0.48" }
thiserror = "1"
itertools = "0.10"
indexmap = "^1.7"
async-trait = "0.1"

[dependencies.polars-core]
version = "0.21"
#git = "https://github.com/pola-rs/polars.git"
#rev = "f6b6398a0b7bad77b86e130685d56373ce14caa4"
features = ["serde"]

[dependencies.polars-io]
#git = "https://github.com/pola-rs/polars.git"
#rev = "f6b6398a0b7bad77b86e130685d56373ce14caa4"
version = "0.21"
features = [
    "ipc",
    "parquet",
    "csv-file",
    "csv-core",
    "json",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.h3ron]
#version = "0.14"
git = "https://github.com/nmandery/h3ron.git"
rev = "7c1a9ac56d413ebb0960d2ffd6f28988f6178a78"
# path = "/home/nico/CLionProjects/h3ron/h3ron"
features = ["io", "use-rayon", "roaring", "compression", "use-serde"]

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.hyper]
version = "0.14"
features = ["client"]

[dependencies.native-tls]
version = "0.2"
features = ["vendored"]

[dependencies.bytes]
version = "1"

[dependencies.tokio]
version = "1"
features = [
    "rt",
    "macros",
    "sync",
    "parking_lot"
]

[dependencies.backoff]
version = "0.4"
features = ["tokio_1", "futures", "tokio"]

