[package]
name = "slippymap-h3-tiles"
description = "correlating h3 cells into a spherical mercator slippy map tile grid"
authors = ["Nico Mandery <nico@nmandery.net>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
geo = "0.21"
geo-types = "^0.7"

[dependencies.h3ron]
#version = "0.14"
git = "https://github.com/nmandery/h3ron.git"
rev = "527ca333d3f506121018270763ac841ba08516d2"
#path = "/home/nico/CLionProjects/h3ron/h3ron"

[dev-dependencies]
approx = "0.5"
