[package]
name = "slippymap-h3-tiles"
description = "correlating h3 cells into a spherical mercator slippy map tile grid"
authors = ["Nico Mandery <nico@nmandery.net>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
geo = "0.22"
geo-types = "^0.7"

[dependencies.h3ron]
#version = "0.14"
git = "https://github.com/nmandery/h3ron.git"
rev = "d86828c3adc6b857437d040e7900277d5f1e7cad"
#path = "/home/nico/CLionProjects/h3ron/h3ron"

[dev-dependencies]
approx = "0.5"
