[package]
name = "slippymap-h3-tiles"
description = "correlating h3 cells into a spherical mercator slippy map tile grid"
authors = ["Nico Mandery <nico@nmandery.net>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
geo = "0.22"
geo-types = "^0.7"

[dependencies.h3ron]
version = "0.15"

[dev-dependencies]
approx = "0.5"
