[package]
name = "til3serv"
version = "0.1.0"
edition = "2021"
authors = ["Nico Mandery <nico@nmandery.net>"]
publish = false

[dependencies]
axum = "^0.4"
clap = "^3"
env_logger = "0.9"
eyre = "0.6"
geo = "0.18"
geo-types = "^0.7"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
serde_yaml = "^0.8"

[dependencies.minijinja]
version = "^0.13"
features = ["builtins", "json"]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.slippymap-h3-tiles]
path = "../slippymap-h3-tiles"

[dependencies.h3ron]
#version = "0.14"
git = "https://github.com/nmandery/h3ron.git"
rev = "a2141b2185583e534e61a920bdbd241191338414"
#path = "/home/nico/CLionProjects/h3ron/h3ron"

[dependencies.serde]
version = "1"
features = ["derive"]

#[dependencies.polars-core]
#version = "0.19"
#features = ["serde"]

#[dependencies.polars-io]
#version = "0.19"
#features = ["ipc", "json", "parquet", "csv-file", "csv-core"]

[dependencies.tower-http]
version = "^0.2"
features = ["compression-full", "trace"]

[dependencies.s3io]
path = "../s3io"

[build-dependencies]
vergen = { version = "6", features = ["rustc", "build"] }
