[package]
name = "til3serv"
version = "0.1.0"
edition = "2021"
authors = ["Nico Mandery <nico@nmandery.net>"]
publish = false

[dependencies]
anyhow = "1"
axum = "^0.5"
clap = "^3"
env_logger = "0.9"
geo = "0.22"
geo-types = "^0.7"
once_cell = "1"
log = "0.4"
regex = "1.5"
serde_yaml = "^0.9"

[dependencies.minijinja]
version = "^0.18"
features = ["builtins", "json"]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.slippymap-h3-tiles]
path = "../slippymap-h3-tiles"

[dependencies.h3ron]
version = "0.15"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tower-http]
version = "^0.3"
features = ["compression-full", "trace"]

[dependencies.s3io]
path = "../s3io"

[build-dependencies]
vergen = { version = "7", features = ["rustc", "build"] }
